# fresh

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  REFACTORING_PROGRESS.md  RELEASE_NOTES.md  TODO.md  build.rs  config-schema.json  flake.nix
.github/workflows/: cargo-publish.yml  release-npm.yml  release.yml  web-ui.yml
crates/fresh-core/: Cargo.toml
crates/fresh-editor/: Cargo.toml  build.rs  config.example.json
crates/fresh-gui/: Cargo.toml
crates/fresh-gui/src/: lib.rs
crates/fresh-input-parser/: Cargo.toml
crates/fresh-input-parser/src/: lib.rs  proptests.rs  tests.rs
crates/fresh-languages/: Cargo.toml
crates/fresh-plugin-runtime/: Cargo.toml
docs/: CR.md  PLUGIN_API_COMPARISON.md  TODO.md  fresh.txt  index.md  plugin-api.md  quickjs.md  theme-screenshot-diff.md
docs/.vitepress/: config.ts
docs/configuration/: index.md
docs/features/: editing.md  file-explorer.md  index.md  session-persistence.md  ssh.md  terminal.md  themes.md
docs/internal/: DEVCONTAINER_SPEC_GAP_PLAN.md  (+30 more)
homepage/: index.html
keymaps/: default.json
plugins/: clangd_support.ts  diagnostics_panel.ts  git_explorer.ts  manual_help.ts  markdown_compose.ts  merge_conflict.ts  theme_editor.i18n.json  theme_editor.ts  welcome.lua
scripts/: bump-version.py  gen_schema.sh  install.sh  repro_plugin_hang.sh  serial_lag_bench.py
src/: actions.rs  async_bridge.rs  buffer.rs  chunk_tree.rs  commands.rs  config.rs  config_io.rs  cursor.rs  editor.rs  event.rs  hooks.rs  i18n.rs  indent.rs  keybindings.rs  lib.rs  line_cache.rs  lsp_async.rs  main.rs  partial_config.rs  plugin_api.rs  plugin_manager.rs  plugin_thread.rs  popup.rs  process_limits.rs  prompt.rs  split.rs  state.rs  theme.rs  ts_runtime.rs  viewport.rs
tests/: e2e_tests.rs  integration_tests.rs  merge_parser_test.js
themes/: high-contrast.json
web-ui/: README.md  index.html  shell.html
(+597 files in other folders)
